--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -52,8 +52,8 @@
                 <p><a href="mailto:kokad@kokad.ee">kokad@kokad.ee</a></p>
             </div>
             <div class="social">
-                <img src="/twitter.svg" alt="">
-                <img src="/linkedin.png" alt="">
+                <img src="twitter.svg" alt="">
+                <img src="linkedin.png" alt="">
             </div>
         </footer>
     </div>
